# UPS_SP

SP_UPS_Server/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  Request.cpp  Request.h  Response.cpp  Response.h  Server.cpp  Server.h  Utils.cpp  Utils.h  configfile.txt  main.cpp
UPS_Connect4/: game_win.py  lobby_win.py  login_win.py  main.py  send_messages.py
